# ml-intern

./: Dockerfile  README.md  REVIEW.md  pyproject.toml
.github/workflows/: claude-review.yml  claude.yml
agent/: config.py  main.py
agent/context_manager/: manager.py
agent/core/: agent_loop.py  hf_access.py  session.py  session_uploader.py  tools.py
agent/prompts/: system_prompt.yaml
agent/tools/: github_find_examples.py  github_list_repos.py  github_read_file.py  github_search_code.py  jobs_tool.py  papers_tool.py  research_tool.py  sandbox_client.py  sandbox_tool.py
agent/utils/: terminal_display.py
backend/: dependencies.py  models.py  session_manager.py
backend/routes/: agent.py
configs/: main_agent_config.json
frontend/src/components/: JobsUpgradeDialog.tsx
frontend/src/components/Chat/: ToolCallGroup.tsx
frontend/src/hooks/: useAgentChat.ts
frontend/src/lib/: sse-chat-transport.ts
frontend/src/store/: agentStore.ts
posttrain-bench/: solve.sh
posttrain-bench/slurm/: submit.sbatch
scripts/: build_kpis.py
tests/integration/tools/: test_papers_integration.py
tests/unit/: test_build_kpis.py  test_hf_access.py
