[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ml-intern"
version = "0.1.0"
description = "An ML intern agent powered by Hugging Face models and tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Hugging Face", email = "contact@huggingface.co" },
]
keywords = ["machine-learning", "llm", "agent", "huggingface"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers>=4.40.0",
    "huggingface-hub>=0.23.0",
    "smolagents>=0.1.0",
    "torch>=2.0.0",
    "accelerate>=0.27.0",
    "datasets>=2.18.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[project.scripts]
ml-intern = "ml_intern.cli:app"

[project.urls]
Homepage = "https://github.com/huggingface/ml-intern"
Repository = "https://github.com/huggingface/ml-intern"
Issues = "https://github.com/huggingface/ml-intern/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_intern"]

[tool.ruff]
line-length = 119
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ml_intern"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/ml_intern --cov-report=term-missing"

[tool.coverage.run]
source = ["src/ml_intern"]
omit = ["tests/*"]
